tests/fixtures/invalid/pow_bytes_bool_none.py
# Cannot call pow() with Bytes, Bool, None
x = pow(b"hello", True, None)
